Tue Sep 14 15:02:24 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Context_Impl_Base.cpp:
        * DAnCE/ciao/Context_Impl_Base.h:
        * DAnCE/ciao/Context_Impl_T.cpp:
        * DAnCE/ciao/Context_Impl_T.h:
        * DAnCE/ciao/Home_Servant_Impl_Base.cpp:
        * DAnCE/ciao/Home_Servant_Impl_Base.h:
        * DAnCE/ciao/Home_Servant_Impl_T.cpp:
        * DAnCE/ciao/Home_Servant_Impl_T.h:
        * ciao/Context_Impl_Base.cpp:
        * ciao/Context_Impl_Base.h:
        * ciao/Context_Impl_T.cpp:
        * ciao/Context_Impl_T.h:
        * ciao/Home_Servant_Impl_Base.cpp:
        * ciao/Home_Servant_Impl_Base.h:
        * ciao/Home_Servant_Impl_T.cpp:
        * ciao/Home_Servant_Impl_T.h:

          New files, duplicated in CIAO/ciao and
          CIAO/DAnCE/ciao, containing base classes 
          for the CIDL-compiler-generated context
          and home servant classes. A template class
          sits in the hierarchy between the generated
          class and its skeleton base class (in the
          case of the home servant) or its executor
          base (in the case of the context). The
          template class also inherits from a 
          non-template class which is used to hold
          members and operations not using any template
          parameters.

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * DAnCE/ciao/CCM_Core.mpc:
        * DAnCE/ciao/Servant_Impl_Base.cpp:
        * DAnCE/ciao/Servant_Impl_Base.h:
        * DAnCE/ciao/Servant_Impl_T.cpp:
        * DAnCE/ciao/Servant_Impl_T.h:
        * ciao/CCM_Core.mpc:
        * ciao/Servant_Impl_Base.cpp:
        * ciao/Servant_Impl_Base.h:
        * ciao/Servant_Impl_T.cpp:
        * ciao/Servant_Impl_T.h:

	  Modified existing files to correspond with the
          new files described above and:

	  - Added implementations for the component servant
            operations provide_facet(), get_named_facets(),