@@ -19,13 +19,14 @@
 
 #include /**/ "ace/pre.h"
 
+#include "tao/Objref_VarOut_T.h"
+
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include "CIAO_Server_Export.h"
 #include "ciao/CCM_ContainerC.h"
-#include "tao/Objref_VarOut_T.h"
 
 namespace Components
 {
